fix todo overflow and start to add functionality

--- a/src/components/_app.scss
+++ b/src/components/_app.scss
@@ -87,14 +87,14 @@
         margin: 0;
         width: 100%;
         height: 100%;
-        overflow-x: hidden;
+        overflow-x: scroll;
         overflow-y: hidden;
         display: flex;
 
         .todo {
-            margin: 1rem;
+            margin: 0 1rem 1rem 1rem;
             width: 30rem;
-            height: 100%;
+            // height: 100%;
             display: grid;
             grid-template-columns: 2fr 1fr;
             grid-template-rows: min-content 100%;
@@ -102,6 +102,7 @@
                 "title alert"
                 "todo-list todo-list";
             background-color: $ui-todo;
+            border-radius: .5rem;
 
             &__title {
                 grid-area: title;
@@ -114,7 +115,8 @@
                 grid-area: alert;
                 width: 100%;
                 height: 100%;
-                background-color: darken();
+                background-color: darken($ui-todo, 10%);
+                border-radius: 0 .5rem 0 1rem;
             }
 
             &__list {
